improvement in projects section

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,16 @@
                 <h4>Weather App</h4>
                 <p class="card-text">This is a weather app in which I learned how to make API petitions. It also has
                     interactive animations and it's completely responsive</p>
-                <button class="github-btn">Github</button>
+                <p>Tech Stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="html logo" width="50">
+                    <img src="./assets/img/angular-1.png" alt="angular" width="50"> <img src="./assets/img/css.png"
+                        alt="css logo" width="47">
+                </p>
+
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/weather-app" target="_blank">Github</a>
+                </button>
             </div>
         </div>
 
@@ -18,9 +27,19 @@
             <img src="./assets/img/spotify-clon.png" class="card-img-top" alt="Spotify clon">
             <div class="card-body">
                 <h4>Spotify Clon</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <button class="github-btn">Github</button>
+                <p class="card-text">This is a Spotify clone in which I replicate the entire aesthetic of its web page
+                    and make a request to its API to gather all the genres and artists. It also features a login page.
+                </p>
+                <p>Tech stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="bootstrap logo" width="50">
+                    <img src="./assets/img/angular-1.png" alt="angular" width="50"> <img src="./assets/img/css.png"
+                        alt="css logo" width="47">
+                    <img src="./assets/img/mongo-1.png" alt="mongoDB logo" width="50">
+                </p>
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/spotify-web-clon" target="_blank">Github</a>
+                </button>
             </div>
         </div>
 
@@ -28,19 +47,54 @@
             <img src="./assets/img/crud-app.png" class="card-img-top" alt="Shopping list">
             <div class="card-body">
                 <h4>Crud</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <button class="github-btn">Github</button>
+                <p class="card-text">Classic CRUD that consists of a grocery shopping list. Made entirely in vanilla
+                    JavaScript. You can add items, strike them off when you purchase them, or delete them.</p>
+                <p>Tech stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="html logo" width="50">
+                    <img src="./assets/img/javascript-1.png" alt="javascript logo" width="50">
+                    <img src="./assets/img/css.png" alt="css logo" width="47">
+                </p>
+
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/CRUD" target="_blank">Github</a>
+                </button>
             </div>
         </div>
 
-        <div class="card">
+        <div class="card c">
             <img src="./assets/img/crypto.png" class="card-img-top" alt="Crypto app">
             <div class="card-body">
                 <h4>Crypto prices</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <button class="github-btn">Github</button>
+                <p class="card-text">This is a webpage where I made an HTTP request to an API, where you can check the
+                    real-time prices of cryptocurrencies</p>
+                <p>Tech stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="html logo" width="50">
+                    <img src="./assets/img/javascript-1.png" alt="javascript logo" width="50">
+                    <img src="./assets/img/css.png" alt="css logo" width="47">
+                </p>
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/cripto-app" target="_blank">Github</a>
+                </button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./assets/img/blogApp.png" class="card-img-top" alt="Crypto app">
+            <div class="card-body">
+                <h4>Series Blog</h4>
+                <p class="card-text">Personal blog in which I upload all the TV series that I recommend. It is possible
+                    to filter by genre or by the streaming platform where the series can be found.</p>
+                <p>Tech stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="html logo" width="50">
+                    <img src="./assets/img/javascript-1.png" alt="javascript logo" width="50">
+                    <img src="./assets/img/css.png" alt="css logo" width="47">
+                    <img src="./assets/img/angular-1.png" alt="angular" width="50">
+                </p>
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/series-blog" target="_blank">Github</a>
+                </button>
             </div>
         </div>
     </div>
