--- a/src/styles.css
+++ b/src/styles.css
@@ -5,16 +5,16 @@
 
 body {
     background-image: url(./assets/img/testing.png);
-    background-size: contain;
     background-attachment: fixed;
+    background-size: cover;
 }
 
+
 @media screen and (min-width: 768px) {
+
     #content {
         width: 80%;
         margin: 0px auto;
-        background-color: rgba(215, 216, 219, 0.321);
-        border-radius: 20px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     }
 }
