--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,7 +5,7 @@
 <div class="container text-center">
     <div class="row projects_container">
         <div class="card">
-            <img src="./assets/img/weather-app.png" class="card-img-top" alt="Weather App">
+            <img src="./assets/img/weather.png" class="card-img-top" alt="Weather App">
             <div class="card-body">
                 <h4>Weather App</h4>
                 <p class="card-text">This is a weather app in which I learned how to make API petitions. It also has
