--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -53,7 +53,7 @@
       <div class="container cont-main w-75 h-25">
             <div class="row">
                   <div class="col text-center title-container">
-                        <h1>I'm Lara</h1>
+                        <h1>Lara Aguerre</h1>
                         <div class="frontend">
                               <h3>Frontend Developer</h3>
                         </div>
