--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -23,6 +23,7 @@
 }
 
 .contact-form {
+    background-color: rgba(255, 255, 255, 0.736);
     border: 1px solid rgba(3, 3, 3, 0.83);
     box-shadow: 3px 3px #070707;
     padding: 25px;
