--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -17,9 +17,11 @@
                         alt="css logo" width="47">
                 </p>
 
-                <button class="github-btn">
-                    <a href="https://github.com/Laguerre91/weather-app" target="_blank">Github</a>
-                </button>
+                <a href="https://github.com/Laguerre91/weather-app" target="_blank">
+                    <button class="github-btn">
+                        Github
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -37,9 +39,12 @@
                         alt="css logo" width="47">
                     <img src="./assets/img/mongo-1.png" alt="mongoDB logo" width="50">
                 </p>
-                <button class="github-btn">
-                    <a href="https://github.com/Laguerre91/spotify-web-clon" target="_blank">Github</a>
-                </button>
+
+                <a href="https://github.com/Laguerre91/spotify-web-clon" target="_blank">
+                    <button class="github-btn">
+                        Github
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -56,9 +61,11 @@
                     <img src="./assets/img/css.png" alt="css logo" width="47">
                 </p>
 
-                <button class="github-btn">
-                    <a href="https://github.com/Laguerre91/CRUD" target="_blank">Github</a>
-                </button>
+                <a href="https://github.com/Laguerre91/CRUD" target="_blank">
+                    <button class="github-btn">
+                        Github
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -74,9 +81,11 @@
                     <img src="./assets/img/javascript-1.png" alt="javascript logo" width="50">
                     <img src="./assets/img/css.png" alt="css logo" width="47">
                 </p>
-                <button class="github-btn">
-                    <a href="https://github.com/Laguerre91/cripto-app" target="_blank">Github</a>
-                </button>
+                <a href="https://github.com/Laguerre91/cripto-app" target="_blank">
+                    <button class="github-btn">
+                        Github
+                    </button>
+                </a>
             </div>
         </div>
         <div class="card">
@@ -92,9 +101,12 @@
                     <img src="./assets/img/css.png" alt="css logo" width="47">
                     <img src="./assets/img/angular-1.png" alt="angular" width="50">
                 </p>
-                <button class="github-btn">
-                    <a href="https://github.com/Laguerre91/series-blog" target="_blank">Github</a>
-                </button>
+
+                <a href="https://github.com/Laguerre91/series-blog" target="_blank">
+                    <button class="github-btn">
+                        Github
+                    </button>
+                </a>
             </div>
         </div>
     </div>
