--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -7,7 +7,7 @@
 
 .slider {
     overflow: hidden;
-    margin-top: 2%;
+    margin-top: 150px;
     display: flex;
     margin-left: 0;
     margin-right: 0;
@@ -125,6 +125,8 @@ h1 {
     }
 
     .title-container {
+        position: relative;
+        top: 180px;
         height: fit-content;
     }
 
