--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid no-margin-no-padding" id="home">
 
-      <!--PHOTO OF ME-->
+      <div class="habbo">
+            <img src="./assets/img/avatarimage.png" alt="lali">
+      </div>
 
+      <!--PHOTO OF ME-->
       <div class="container cont-main w-75 h-25">
             <div class="row">
                   <div class="col text-center title-container">
